@@ -10,6 +10,7 @@
 
 
 Version 4.2.3
+ - Fixed: [ 1771095 ] Place Check - Index Directory (fisharebest)
  - Update: is_dead() calculations now take account of non-gregorian dates
  - Fixed: [ 1941711 ] Age at which to assume a person is dead Off By 1 Year (fisharebest)
  - Fixed: [ 2033046 ] Misleading text for changes_present (fisharebest)
